--- a/translations/ja.json
+++ b/translations/ja.json
@@ -18,6 +18,7 @@
     "no_tags": "タグなし",
     "no_domain_names": "ドメイン名なし"
   },
+  "update_organization_done": "組織のメモおよび詳細を更新しました",
   "update_user_done": "ユーザーのメモおよび詳細を更新しました!",
   "ajax_error": "エラーが発生しました。しばらく経ってからもう一度やり直してください。",
   "tickets": "チケット",
