--- a/translations/ru.json
+++ b/translations/ru.json
@@ -18,6 +18,7 @@
     "no_tags": "Нет тегов",
     "no_domain_names": "Нет доменных имен"
   },
+  "update_organization_done": "Примечания и данные организаций обновлены",
   "update_user_done": "Примечания и данные пользователей обновлены!",
   "ajax_error": "Произошла ошибка. Повторите попытку позже.",
   "tickets": "Тикеты",
@@ -39,9 +40,9 @@
   },
   "spoke-ticket": {
     "link": {
-      "pre": "Это тикет от аккаунта spoke:"
+      "pre": "Это тикет от периферийного аккаунта:"
     }
   },
   "account": "Аккаунт",
-  "spoke_ticket_id": "ID тикета Spoke"
+  "spoke_ticket_id": "ID периферийного тикета"
 }
