--- a/translations/en-ca.json
+++ b/translations/en-ca.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "description": "Displays information about the ticket requester and requesters organization.",
+    "description": "Displays information about the ticket requester and requesters organisation.",
     "name": "User Data App",
     "parameters": {
       "unfolded_on_startup": {
@@ -12,23 +12,24 @@
     "title": "User Data Admin panel",
     "save": "Save and go back",
     "text": "Please select the user fields you would like to permanently display on the App",
-    "include_org_fields": "Display organization information"
+    "include_org_fields": "Display organisation information"
   },
   "info": {
     "no_tags": "No tags",
     "no_domain_names": "No domain names"
   },
-  "update_user_done": "User notes and details updated!",
+  "update_organization_done": "Organisation notes and details updated",
+  "update_user_done": "User notes and details updated.",
   "ajax_error": "An error occurred. Please try again later.",
   "tickets": "Tickets",
   "toggle_details_notes": "Toggle Details and Notes",
-  "toggle_organization": "Toggle organization",
+  "toggle_organization": "Toggle organisation",
   "details_and_notes": "Details and Notes",
   "details": "Details",
   "notes": "Notes",
   "locale": "User's language",
   "tags": "Tags",
-  "organization": "Organization",
+  "organization": "Organisation",
   "ticket_status": {
     "new": "n",
     "open": "o",
