--- a/translations/fr.json
+++ b/translations/fr.json
@@ -18,6 +18,7 @@
     "no_tags": "Aucun marqueur",
     "no_domain_names": "Aucun nom de domaine"
   },
+  "update_organization_done": "Notes et détails de l’organisation mis à jour",
   "update_user_done": "Notes et détails de l’utilisateur mis à jour !",
   "ajax_error": "Une erreur est survenue. Réessayez plus tard.",
   "tickets": "Tickets",
@@ -39,9 +40,9 @@
   },
   "spoke-ticket": {
     "link": {
-      "pre": "Ce ticket provient du compte satellite :"
+      "pre": "Ce ticket provient du compte Spoke :"
     }
   },
   "account": "Compte",
-  "spoke_ticket_id": "ID de ticket satellite"
+  "spoke_ticket_id": "ID de ticket Spoke"
 }
