--- a/translations/it.json
+++ b/translations/it.json
@@ -11,13 +11,14 @@
   "admin": {
     "title": "Pannello amministrazione Dati utente",
     "save": "Salva e torna indietro",
-    "text": "Selezionate i campi utente da visualizzare in maniera permanente nell’app",
+    "text": "Seleziona i campi utente da visualizzare in maniera permanente nell’app",
     "include_org_fields": "Visualizza informazioni sull’organizzazione"
   },
   "info": {
     "no_tags": "Nessun tag",
     "no_domain_names": "Nessun nome di dominio"
   },
+  "update_organization_done": "Aggiornamento dettagli e note organizzazione completato.",
   "update_user_done": "Aggiornamento dettagli e note utenti completato.",
   "ajax_error": "Si è verificato un errore. Riprova più tardi.",
   "tickets": "Ticket",
@@ -26,22 +27,22 @@
   "details_and_notes": "Dettagli e note",
   "details": "Dettagli",
   "notes": "Note",
-  "locale": "Lingua dell'utente",
+  "locale": "Lingua dell’utente",
   "tags": "Tag",
   "organization": "Organizzazione",
   "ticket_status": {
     "new": "n",
     "open": "a",
-    "pending": "s",
-    "hold": "i",
+    "pending": "i",
+    "hold": "s",
     "solved": "r",
     "closed": "c"
   },
   "spoke-ticket": {
     "link": {
-      "pre": "Questo ticket proviene dall'account raggio:"
+      "pre": "Questo ticket proviene dall’account Spoke:"
     }
   },
   "account": "Account",
-  "spoke_ticket_id": "ID ticket raggio"
+  "spoke_ticket_id": "ID ticket Spoke"
 }
