--- a/translations/pt-br.json
+++ b/translations/pt-br.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "description": "Exibe as informações sobre o solicitante do ticket e a organização dos solicitantes.",
-    "name": "Aplicativo de Dados do usuário",
+    "name": "Aplicativo Dados do usuário",
     "parameters": {
       "unfolded_on_startup": {
         "label": "Bandeja de aplicativos aberta por padrão"
@@ -18,6 +18,7 @@
     "no_tags": "Nenhuma tag",
     "no_domain_names": "Nenhum nome de domínio"
   },
+  "update_organization_done": "Observações e detalhes da organização atualizados",
   "update_user_done": "Observações e detalhes do usuário atualizados!",
   "ajax_error": "Ocorreu um erro. Tente novamente mais tarde.",
   "tickets": "Tickets",
