updated translations for GoLion

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "description": "عرض معلومات حول طالب التذكرة ومؤسسة الطالب.",
+    "description": "عرض معلومات حول طالب التذكرة ومنظمة الطالب.",
     "name": "تطبيق بيانات المستخدم",
     "parameters": {
       "unfolded_on_startup": {
@@ -11,25 +11,25 @@
   "admin": {
     "title": "لوحة إدارة بيانات المستخدم",
     "save": "حفظ وعودة",
-    "text": "يُرجى اختيار حقوق المستخدم التي ترغب في عرضها بصفة دائمة عبر التطبيق",
-    "include_org_fields": "عرض معلومات المؤسسة"
+    "text": "يُرجى اختيار حقول المستخدم التي ترغب في عرضها بصفة دائمة عبر التطبيق",
+    "include_org_fields": "عرض معلومات المنظمة"
   },
   "info": {
     "no_tags": "لا توجد وسوم",
     "no_domain_names": "لا توجد أسماء نطاقات"
   },
-  "update_organization_done": "تم تحديث ملاحظات وتفاصيل المؤسسة",
+  "update_organization_done": "تم تحديث ملاحظات وتفاصيل المنظمة",
   "update_user_done": "تم تحديث ملاحظات وتفاصيل المؤسسة",
   "ajax_error": "حدث خطأ. الرجاء إعادة المحاولة لاحقًا.",
   "tickets": "التذاكر",
   "toggle_details_notes": "تبديل التفاصيل والملاحظات",
-  "toggle_organization": "تبديل المؤسسة",
+  "toggle_organization": "تبديل المنظمة",
   "details_and_notes": "تفاصيل وملاحظات",
   "details": "تفاصيل",
   "notes": "ملاحظات",
   "locale": "لغة المستخدم",
-  "tags": "العلامات",
-  "organization": "المؤسسة",
+  "tags": "وسوم",
+  "organization": "المنظمة",
   "ticket_status": {
     "new": "ج",
     "open": "ف",
@@ -40,9 +40,9 @@
   },
   "spoke-ticket": {
     "link": {
-      "pre": "هذه التذكرة من حساب متحدث:"
+      "pre": "هذه التذكرة من حساب رافد:"
     }
   },
   "account": "الحساب",
-  "spoke_ticket_id": "معرف تذكرة متحدث"
+  "spoke_ticket_id": "معرف تذكرة رافد"
 }
