--- a/translations/fr.json
+++ b/translations/fr.json
@@ -26,7 +26,7 @@
   "toggle_organization": "Afficher/masquer l’organisation",
   "details_and_notes": "Détails et notes",
   "details": "Détails",
-  "notes": "Remarques",
+  "notes": "Notes",
   "locale": "Langue de l’utilisateur",
   "tags": "Marqueurs",
   "organization": "Organisation",
