--- a/translations/en-gb.json
+++ b/translations/en-gb.json
@@ -11,7 +11,7 @@
   "admin": {
     "title": "User Data Admin panel",
     "save": "Save and go back",
-    "text": "Please select the user fields you would like to permanently display on the App",
+    "text": "Please select the user fields you would like to permanently display on the app",
     "include_org_fields": "Display organisation information"
   },
   "info": {
@@ -22,9 +22,9 @@
   "update_user_done": "User notes and details updated.",
   "ajax_error": "An error occurred. Please try again later.",
   "tickets": "Tickets",
-  "toggle_details_notes": "Toggle Details and Notes",
+  "toggle_details_notes": "Toggle details and notes",
   "toggle_organization": "Toggle organisation",
-  "details_and_notes": "Details and Notes",
+  "details_and_notes": "Details and notes",
   "details": "Details",
   "notes": "Notes",
   "locale": "User's language",
@@ -44,5 +44,5 @@
     }
   },
   "account": "Account",
-  "spoke_ticket_id": "Spoke Ticket ID"
+  "spoke_ticket_id": "Spoke ticket ID"
 }
