--- a/translations/en.json
+++ b/translations/en.json
@@ -29,7 +29,7 @@
     },
     "text": {
       "title": "Help text for the admin",
-      "value": "Please select the user fields you would like to permanently display on the App"
+      "value": "Please select the user fields you would like to permanently display on the app"
     },
     "include_org_fields": {
       "title": "Check box to display org fields",
@@ -64,7 +64,7 @@
   },
   "toggle_details_notes": {
     "title": "Link to toggle open / close the details and notes box",
-    "value": "Toggle Details and Notes"
+    "value": "Toggle details and notes"
   },
   "toggle_organization": {
     "title": "Link to toggle open / close the organization box",
@@ -72,7 +72,7 @@
   },
   "details_and_notes": {
     "title": "Header/title for the details and notes box",
-    "value": "Details and Notes"
+    "value": "Details and notes"
   },
   "details": {
     "title": "Details box after this will be an editable text box",
@@ -134,6 +134,6 @@
   },
   "spoke_ticket_id": {
     "title": "this is the ticket ID from the spoke of that user",
-    "value": "Spoke Ticket ID"
+    "value": "Spoke ticket ID"
   }
 }
