--- a/translations/en.json
+++ b/translations/en.json
@@ -1,12 +1,20 @@
 {
   "app": {
+    "name": {
+      "title": "Name for App: User Data",
+      "value": "User Data"
+    },
     "description": {
-      "title": "App description",
+      "title": "Description for App: User Data",
       "value": "Displays information about the ticket requester and requesters organization."
     },
-    "name": {
-      "title": "Name of the App",
-      "value": "User Data App"
+    "long_description": {
+      "title": "Long Description for App: User Data",
+      "value": "The Zendesk Support User Data app gives you customer information, including user and organization details such as tags, ticket activity, and contact, right next to a ticket.\n\nWith more context around the customer, your agents get a holistic view of the interactions your customers have had with your organization and can provide a more tailored response.\n\nFor any questions, please email [support@zendesk.com](mailto:support@zendesk.com).\n\nBy enabling this app, You agree to the [Built by Zendesk Terms of Use](https://www.zendesk.com/company/built-by-zendesk-agmt/)."
+    },
+    "installation_instructions": {
+      "title": "Installation Instructions for App: User Data",
+      "value": "To install the User Data app:\n\n1. Sign in to your Zendesk Support account, then click the Admin icon in the sidebar.\n2. Select Apps > Marketplace, then find the User Data app and click the tile.\n3. On the User Data app page, click Install app in the upper-right corner.\n4. Enter a name for the app, then click Install. "
     },
     "parameters": {
       "unfolded_on_startup": {
