--- a/translations/en.yml
+++ b/translations/en.yml
@@ -6,13 +6,39 @@ packages:
 
 parts:
   - translation:
+      key: "txt.apps.user_data_app.app.name"
+      title: "Name for App: User Data"
+      value: "User Data"
+  - translation:
       key: "txt.apps.user_data_app.app.description"
-      title: "App description"
+      title: "Description for App: User Data"
       value: "Displays information about the ticket requester and requesters organization."
   - translation:
-      key: "txt.apps.user_data_app.app.name"
-      title: "Name of the App"
-      value: "User Data App"
+      key: "txt.apps.user_data_app.app.long_description"
+      title: "Long Description for App: User Data"
+      value: "The Zendesk Support User Data app gives you customer information, including user and organization details such as tags, ticket activity, and contact, right next to a ticket.
+
+
+With more context around the customer, your agents get a holistic view of the interactions your customers have had with your organization and can provide a more tailored response.
+
+
+For any questions, please email [support@zendesk.com](mailto:support@zendesk.com).
+
+
+By enabling this app, You agree to the [Built by Zendesk Terms of Use](https://www.zendesk.com/company/built-by-zendesk-agmt/)."
+  - translation:
+      key: "txt.apps.user_data_app.app.installation_instructions"
+      title: "Installation Instructions for App: User Data"
+      value: "To install the User Data app:
+
+
+1. Sign in to your Zendesk Support account, then click the Admin icon in the sidebar.
+
+2. Select Apps > Marketplace, then find the User Data app and click the tile.
+
+3. On the User Data app page, click Install app in the upper-right corner.
+
+4. Enter a name for the app, then click Install. "
   - translation:
       key: "txt.apps.user_data_app.app.parameters.unfolded_on_startup.label"
       title: "Check box option in the settings to allow the admin to choose to open the apps tray automatically when the ticket loads"
