--- a/src/translations/en.yml
+++ b/src/translations/en.yml
@@ -99,6 +99,7 @@ By enabling this app, You agree to the [Built by Zendesk Terms of Use](https://w
       key: "txt.apps.user_data_app.no_requester"
       title: "Message that the current ticket does not have a requester. Likely to happen on new tickets."
       value: "This ticket has no requester"
+      screenshot: https://drive.google.com/open?id=13MCMadhDoHVPilgVCbXgH9Aw71jVlduk
   - translation:
       key: "txt.apps.user_data_app.details_and_notes"
       title: "Header/title for the details and notes box"
